exports[`string-content > invalid(1): a { content: \"no\"; font-family: \"no\"; } 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'

Code:
  1 | a { content: "no"; font-family: "no"; }

`;

exports[`string-content > invalid(1): a { content: \"no\"; font-family: \"no\"; } 2`] = `

Message:
> 1 | a { content: "no"; font-family: "no"; }
    |              ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a { content: "yes"; font-family: "no"; }

`;

exports[`string-content > invalid(1): a { content: \"no\"; font-family: \"no\"; } 3`] = `

Message:
> 1 | a { content: "no"; font-family: "no"; }
    |                                 ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a { content: "no"; font-family: "yes"; }

`;

exports[`string-content > invalid(1): value: 'bad' # keep 1`] = `

Options:
- patterns:
    bad: 'good'

Code:
  1 | value: 'bad' # keep

`;

exports[`string-content > invalid(1): value: 'bad' # keep 2`] = `

Message:
> 1 | value: 'bad' # keep
    |        ^^^^^ Prefer \`good\` over \`bad\`.

Output:
  1 | value: "good" # keep

`;

exports[`string-content > invalid(1): {'\\u006eo': 'no'} 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'

Code:
  1 | {'\\u006eo': 'no'}

`;

exports[`string-content > invalid(1): {'\\u006eo': 'no'} 2`] = `

Message:
> 1 | {'\\u006eo': 'no'}
    |  ^^^^^^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | {"yes": 'no'}

`;

exports[`string-content > invalid(1): {'\\u006eo': 'no'} 3`] = `

Message:
> 1 | {'\\u006eo': 'no'}
    |             ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | {'\\u006eo': "yes"}

`;

exports[`string-content > invalid(10): value: 'bad' 1`] = `

Options:
- patterns:
    bad:
      suggest: 'good'
      fix: false

Code:
  1 | value: 'bad'

`;

exports[`string-content > invalid(10): value: 'bad' 2`] = `

Message:
> 1 | value: 'bad'
    |        ^^^^^ Prefer \`good\` over \`bad\`.

Suggestion 1/1: Replace \`bad\` with \`good\`.:
  1 | value: "good"

`;

exports[`string-content > invalid(11): value: 'bad' 1`] = `

Options:
- patterns:
    bad:
      suggest: "\\ud800"
      message: 'Replacement is not representable in SOML.'
      fix: false

Code:
  1 | value: 'bad'

`;

exports[`string-content > invalid(11): value: 'bad' 2`] = `

Message:
> 1 | value: 'bad'
    |        ^^^^^ Replacement is not representable in SOML.

`;

exports[`string-content > invalid(12): value:\n\t\"\"\"\"\n\t\\nbad\"\"\"\\n\n\t\"\"\"\" 1`] = `

Options:
- patterns:
    bad: 'good'

Code:
  1 | value:
  2 | 	""""
  3 | 	\\nbad"""\\n
  4 | 	""""

`;

exports[`string-content > invalid(12): value:\n\t\"\"\"\"\n\t\\nbad\"\"\"\\n\n\t\"\"\"\" 2`] = `

Message:
  1 | value:
> 2 | 	""""
    | 	^^^^
> 3 | 	\\nbad"""\\n
    | ^^^^^^^^^^^
> 4 | 	""""
    | ^^^^^ Prefer \`good\` over \`bad\`.

Output:
  1 | value:
  2 | 	"\\ngood\\"\\"\\"\\n"

`;

exports[`string-content > invalid(13): value: 'bad' 1`] = `

Options:
- patterns:
    bad:
      suggest: '

        "\\'
      fix: false

Code:
  1 | value: 'bad'

`;

exports[`string-content > invalid(13): value: 'bad' 2`] = `

Message:
> 1 | value: 'bad'
    |        ^^^^^ Prefer \`
"\\\` over \`bad\`.

Suggestion 1/1: Replace \`bad\` with \`
"\\\`.:
  1 | value: "\\n\\"\\\\"

`;

exports[`string-content > invalid(2): a[data-name=\"no\"] { background: url(no.png); } 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'

Code:
  1 | a[data-name="no"] { background: url(no.png); }

`;

exports[`string-content > invalid(2): a[data-name=\"no\"] { background: url(no.png); } 2`] = `

Message:
> 1 | a[data-name="no"] { background: url(no.png); }
    |             ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a[data-name="yes"] { background: url(no.png); }

`;

exports[`string-content > invalid(2): a[data-name=\"no\"] { background: url(no.png); } 3`] = `

Message:
> 1 | a[data-name="no"] { background: url(no.png); }
    |                                 ^^^^^^^^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a[data-name="no"] { background: url("yes.png"); }

`;

exports[`string-content > invalid(2): value: \"\\u{62}ad\" 1`] = `

Options:
- patterns:
    bad: 'good'

Code:
  1 | value: "\\u{62}ad"

`;

exports[`string-content > invalid(2): value: \"\\u{62}ad\" 2`] = `

Message:
> 1 | value: "\\u{62}ad"
    |        ^^^^^^^^^^ Prefer \`good\` over \`bad\`.

Output:
  1 | value: "good"

`;

exports[`string-content > invalid(3): a { content: \"\\6e o\"; background: url(\"\\6e o.png\"); } 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'

Code:
  1 | a { content: "\\6e o"; background: url("\\6e o.png"); }

`;

exports[`string-content > invalid(3): a { content: \"\\6e o\"; background: url(\"\\6e o.png\"); } 2`] = `

Message:
> 1 | a { content: "\\6e o"; background: url("\\6e o.png"); }
    |              ^^^^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a { content: "yes"; background: url("\\6e o.png"); }

`;

exports[`string-content > invalid(3): a { content: \"\\6e o\"; background: url(\"\\6e o.png\"); } 3`] = `

Message:
> 1 | a { content: "\\6e o"; background: url("\\6e o.png"); }
    |                                   ^^^^^^^^^^^^^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a { content: "\\6e o"; background: url("yes.png"); }

`;

exports[`string-content > invalid(3): value:\n\t'''\n\tbad\n\t''' 1`] = `

Options:
- patterns:
    bad: 'good'

Code:
  1 | value:
  2 | 	'''
  3 | 	bad
  4 | 	'''

`;

exports[`string-content > invalid(3): value:\n\t'''\n\tbad\n\t''' 2`] = `

Message:
  1 | value:
> 2 | 	'''
    | 	^^^
> 3 | 	bad
    | ^^^^
> 4 | 	'''
    | ^^^^ Prefer \`good\` over \`bad\`.

Output:
  1 | value:
  2 | 	"good"

`;

exports[`string-content > invalid(4): a { content: 'no'; background: url( no.png ); } 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'

Code:
  1 | a { content: 'no'; background: url( no.png ); }

`;

exports[`string-content > invalid(4): a { content: 'no'; background: url( no.png ); } 2`] = `

Message:
> 1 | a { content: 'no'; background: url( no.png ); }
    |              ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a { content: "yes"; background: url( no.png ); }

`;

exports[`string-content > invalid(4): a { content: 'no'; background: url( no.png ); } 3`] = `

Message:
> 1 | a { content: 'no'; background: url( no.png ); }
    |                                ^^^^^^^^^^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a { content: 'no'; background: url("yes.png"); }

`;

exports[`string-content > invalid(4): value:\n\t\"\"\"\n\tbad\n\t\"\"\" 1`] = `

Options:
- patterns:
    bad: 'good'

Code:
  1 | value:
  2 | 	"""
  3 | 	bad
  4 | 	"""

`;

exports[`string-content > invalid(4): value:\n\t\"\"\"\n\tbad\n\t\"\"\" 2`] = `

Message:
  1 | value:
> 2 | 	"""
    | 	^^^
> 3 | 	bad
    | ^^^^
> 4 | 	"""
    | ^^^^ Prefer \`good\` over \`bad\`.

Output:
  1 | value:
  2 | 	"good"

`;

exports[`string-content > invalid(5): a { content: \"no\"; background: url(no); } 1`] = `

Options:
- patterns:
    no: "'\\"\\\\\\n\\r\\f\\t() a"

Code:
  1 | a { content: "no"; background: url(no); }

`;

exports[`string-content > invalid(5): a { content: \"no\"; background: url(no); } 2`] = `

Message:
> 1 | a { content: "no"; background: url(no); }
    |              ^^^^ Prefer \`'"\\
␍	() a\` over \`no\`.

Output:
  1 | a { content: "'\\"\\\\\\a\\d\\c\\9() a"; background: url(no); }

`;

exports[`string-content > invalid(5): a { content: \"no\"; background: url(no); } 3`] = `

Message:
> 1 | a { content: "no"; background: url(no); }
    |                                ^^^^^^^ Prefer \`'"\\
␍	() a\` over \`no\`.

Output:
  1 | a { content: "no"; background: url("'\\"\\\\\\a\\d\\c\\9() a"); }

`;

exports[`string-content > invalid(5): value: ['bad', {nested: 'bad'}] 1`] = `

Options:
- patterns:
    bad: 'good'

Code:
  1 | value: ['bad', {nested: 'bad'}]

`;

exports[`string-content > invalid(5): value: ['bad', {nested: 'bad'}] 2`] = `

Message:
> 1 | value: ['bad', {nested: 'bad'}]
    |         ^^^^^ Prefer \`good\` over \`bad\`.

Output:
  1 | value: ["good", {nested: 'bad'}]

`;

exports[`string-content > invalid(5): value: ['bad', {nested: 'bad'}] 3`] = `

Message:
> 1 | value: ['bad', {nested: 'bad'}]
    |                         ^^^^^ Prefer \`good\` over \`bad\`.

Output:
  1 | value: ['bad', {nested: "good"}]

`;

exports[`string-content > invalid(6): a { content: \"NO\"; background: url(no); } 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'
      fix: false
      caseSensitive: false

Code:
  1 | a { content: "NO"; background: url(no); }

`;

exports[`string-content > invalid(6): a { content: \"NO\"; background: url(no); } 2`] = `

Message:
> 1 | a { content: "NO"; background: url(no); }
    |              ^^^^ Prefer \`yes\` over \`no\`.

Suggestion 1/1: Replace \`no\` with \`yes\`.:
  1 | a { content: "yes"; background: url(no); }

`;

exports[`string-content > invalid(6): a { content: \"NO\"; background: url(no); } 3`] = `

Message:
> 1 | a { content: "NO"; background: url(no); }
    |                                ^^^^^^^ Prefer \`yes\` over \`no\`.

Suggestion 1/1: Replace \`no\` with \`yes\`.:
  1 | a { content: "NO"; background: url("yes"); }

`;

exports[`string-content > invalid(6): value: 'bad' 1`] = `

Options:
- patterns:
    bad:
      suggest: "\\"\\\\\\n\\t\\b\\f\\0"
      message: 'Replace the string content.'

Code:
  1 | value: 'bad'

`;

exports[`string-content > invalid(6): value: 'bad' 2`] = `

Message:
> 1 | value: 'bad'
    |        ^^^^^ Replace the string content.

Output:
  1 | value: "\\"\\\\\\n\\t\\u{8}\\u{c}\\u{0}\\u{7f}"

`;

exports[`string-content > invalid(7): a { content: \"no\"; background: url(no); } 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'
  selectors:
    - 'Url'

Code:
  1 | a { content: "no"; background: url(no); }

`;

exports[`string-content > invalid(7): a { content: \"no\"; background: url(no); } 2`] = `

Message:
> 1 | a { content: "no"; background: url(no); }
    |                                ^^^^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | a { content: "no"; background: url("yes"); }

`;

exports[`string-content > invalid(7): value: 'bad' 1`] = `

Options:
- patterns:
    bad: '\\u0001'

Code:
  1 | value: 'bad'

`;

exports[`string-content > invalid(7): value: 'bad' 2`] = `

Message:
> 1 | value: 'bad'
    |        ^^^^^ Prefer \`\\u0001\` over \`bad\`.

Output:
  1 | value: "\\\\u0001"

`;

exports[`string-content > invalid(8): value: 'bad' 1`] = `

Options:
- patterns:
    bad: "\\r"

Code:
  1 | value: 'bad'

`;

exports[`string-content > invalid(8): value: 'bad' 2`] = `

Message:
> 1 | value: 'bad'
    |        ^^^^^ Prefer \`␍\` over \`bad\`.

`;

exports[`string-content > invalid(8): {unquoted: \"no\", \"no\": 'no'} 1`] = `

Options:
- patterns:
    no:
      suggest: 'yes'

Code:
  1 | {unquoted: "no", "no": 'no'}

`;

exports[`string-content > invalid(8): {unquoted: \"no\", \"no\": 'no'} 2`] = `

Message:
> 1 | {unquoted: "no", "no": 'no'}
    |            ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | {unquoted: "yes", "no": 'no'}

`;

exports[`string-content > invalid(8): {unquoted: \"no\", \"no\": 'no'} 3`] = `

Message:
> 1 | {unquoted: "no", "no": 'no'}
    |                  ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | {unquoted: "no", "yes": 'no'}

`;

exports[`string-content > invalid(8): {unquoted: \"no\", \"no\": 'no'} 4`] = `

Message:
> 1 | {unquoted: "no", "no": 'no'}
    |                        ^^^^ Prefer \`yes\` over \`no\`.

Output:
  1 | {unquoted: "no", "no": "yes"}

`;

exports[`string-content > invalid(9): value: 'bad' 1`] = `

Options:
- patterns:
    bad:
      suggest: "\\ud800"
      message: 'Replacement is not representable in SOML.'

Code:
  1 | value: 'bad'

`;

exports[`string-content > invalid(9): value: 'bad' 2`] = `

Message:
> 1 | value: 'bad'
    |        ^^^^^ Replacement is not representable in SOML.

`;
